fix search 3.0